--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mesto-react",
+  "homepage": "https://https://podogas.github.io/mesto-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
